--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "license": "MIT",
   "dependencies": {
     "@circle-fin/modular-wallets-core": "^1.0.9",
+    "axios": "^1.10.0",
+    "dotenv": "^17.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "viem": "^2.0.0"
