--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "viem": "^2.0.0"
   },
   "devDependencies": {
+    "@nomicfoundation/hardhat-toolbox": "^6.0.0",
+    "@openzeppelin/contracts": "^5.3.0",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
@@ -35,6 +37,7 @@
     "eslint": "^8.55.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "hardhat": "^2.25.0",
     "typescript": "^5.2.2",
     "vite": "^5.0.8"
   },
